# tic-tac-toe

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  AGENT_INSTRUCTIONS.md  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  main.cpp  requirements.txt  test_main.cpp
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/workflows/: build-test.yml  style-checks.yml
src/: cmn.h  game.h  game_board.cpp  game_board.h  game_board_utils.cpp  game_env.cpp  game_env.h  game_move.cpp  game_move.h
test/: test_game_board.cpp
